--- a/Codigo-fonte/LojaVirtual/src/LojaVirtual.Presentation.MVC/Views/Shared/_Layout.cshtml
+++ b/Codigo-fonte/LojaVirtual/src/LojaVirtual.Presentation.MVC/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Clientes", "Index", "Cliente")</li>
                     <li>@Html.ActionLink("Produtos", "Index", "Produto")</li>
+                    <li>@Html.ActionLink("Pedidos", "Index", "Pedido")</li>
                 </ul>
             </div>
         </div>
