--- a/Codigo-fonte/LojaVirtual/src/LojaVirtual.Presentation.MVC/Views/Cliente/Index.cshtml
+++ b/Codigo-fonte/LojaVirtual/src/LojaVirtual.Presentation.MVC/Views/Cliente/Index.cshtml
@@ -12,33 +12,36 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Nome)
+            Nome
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Cpf)
+            CPF
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Email)
+            E-mail
         </th>
         <th></th>
     </tr>
-
-    @foreach (var item in Model)
+    
+    @if (Model != null)
     {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nome)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Cpf)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                &nbsp;
-            </td>
-        </tr>
+        foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Nome)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Cpf)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Email)
+                </td>
+                <td>
+                    &nbsp;
+                </td>
+            </tr>
+        }
     }
 
-</table>
+    </table>
